--- a/lockdown-persist/pom.xml
+++ b/lockdown-persist/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>lockdown-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>2.0.7.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
