--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
 	<modules>
 		<module>lockdown-core</module>
 		<module>lockdown-persist</module>
+		<module>lockdown-rest</module>
 	</modules>
 </project>
