--- a/lockdown-persist/pom.xml
+++ b/lockdown-persist/pom.xml
@@ -11,7 +11,10 @@
 
 	<properties>
 		<java.version>9</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
