--- a/lockdown-core/pom.xml
+++ b/lockdown-core/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring.data.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
