--- a/lockdown-core/pom.xml
+++ b/lockdown-core/pom.xml
@@ -82,6 +82,11 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>25.1-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
